スマホ画面対応３

--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -7,14 +7,14 @@
         <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
         <%= devise_error_messages! %>
         <%= f.hidden_field :reset_password_token %>
-        <div class="field">
+        <div class="field" style="color:#337ab7">
          <%= f.label :password, "New Password" %><br />
          <% if @minimum_password_length %>
           <em>(<%= @minimum_password_length %> characters minimum)</em><br />
          <% end %>
          <%= f.password_field :password, autofocus: true, autocomplete: "off" %>
        </div>
-       <div class="field">
+       <div class="field" style="color:#337ab7">
          <%= f.label :password_confirmation, "Confirm New Password" %><br />
          <%= f.password_field :password_confirmation, autocomplete: "off" %>
        </div>
