--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -6,8 +6,8 @@
         <header class="text-white">Resend Unlock Instructions</header>
          <%= form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
          <%= devise_error_messages! %>
-       <div class="field">
-         <%= f.label :email %><br />
+       <div class="field" style="color:#337ab7">
+         <%= f.label :email %>
          <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
        </div>
        <div class="actions">
