--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -11,7 +11,9 @@
               <div style="color:white"><h1>Script</h1>
                 <%= f.text_area :script, class: 'btn btn-block btn-white' %>
               </div>
+              <div style="color:black">
               <%= f.submit "Check Out" %>
+            </div>
         <% end %>
         <style media="screen">
           input, textarea {
