--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -9,7 +9,7 @@
             <div style="color:white">Title:
             <%= post.title %>
            </div>
-            <div style="color:white">Script:</style>
+            <div style="color:white">Script:
             <%= post.script %>
             </div>
             <%= link_to posts_show_path(post) do %>
