--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,7 +10,9 @@
         <div style="color:white">Script:
         <%= @post.script %>
        </div>
-        <%= link_to 'Check Out', posts_index_path, class: 'btn btn-block btn-white' %>
+       <div class="actions" >
+        <%= link_to 'Check Out', posts_index_path %>
+       </div>
       </div>
     </div>
   </div>
