--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -6,14 +6,14 @@
         <header class="text-white"><%= link_to 'Edit', resource_name.to_s.humanize %></header>
         <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
           <%= devise_error_messages! %>
-          <div class="field">
-           <%= f.label :email %><br />
-           <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-         </div>
+            <div class="field" style="color:#337ab7">
+             <%= f.label :email %>
+             <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+            </div>
          <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
           <div>Currently Waiting Confirmation For: <%= resource.unconfirmed_email %></div>
          <% end %>
-         <div class="field">
+         <div class="field" style="color:#337ab7">
            <%= f.label :password %> <i>(Leave Blank If You Don't Want To Change It)</i><br />
            <%= f.password_field :password, autocomplete: "off" %>
            <% if @minimum_password_length %>
@@ -21,11 +21,11 @@
            <em><%= @minimum_password_length %> characters minimum</em>
            <% end %>
          </div>
-         <div class="field">
+         <div class="field" style="color:#337ab7">
           <%= f.label :password_confirmation %><br />
           <%= f.password_field :password_confirmation, autocomplete: "off" %>
          </div>
-         <div class="field">
+         <div class="field" style="color:#337ab7">
           <%= f.label :current_password %> <i>(We Need Your Current Password To Confirm Your Changes)</i><br />
           <%= f.password_field :current_password, autocomplete: "off" %>
          </div>
