--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -7,7 +7,9 @@
                <%= f.fields_for :movie do |m| %>
                  <%= m.file_field :video %>
                <% end %>
+          <div style="color:black">
           <%= f.submit "Check Out" %>
+        </div>
             <% end %>
       </div>
     </div>
