スマホ画面対応

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -16,7 +16,7 @@
 .top-hero-wrapper {
   width: 100vw;
   height: 100vh;
-  background-image: image-url('icons/top.png');
+  background-image: image-url("icons/top.png");
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
