--- a/app/assets/stylesheets/posts.mobile.scss
+++ b/app/assets/stylesheets/posts.mobile.scss
@@ -8,7 +8,7 @@
     width: 100vw;
     height: auto;
     padding-top: 15px;
-    background-image: image-url('icons/top.png');
+    background-image: image-url("icons/top.png");
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -50,7 +50,7 @@
     width: 100vw;
     height: auto;
     padding: 15px;
-    background-image: image-url('icons/top.png');
+    background-image: image-url("icons/top.png");
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -90,7 +90,7 @@
     width: 100vw;
     height: auto;
     padding-top: 15px;
-    background-image: image-url('icons/top.png');
+    background-image: image-url("icons/top.png");
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -131,7 +131,7 @@
     width: 100vw;
     height: auto;
     padding-top: 15px;
-    background-image: image-url('icons/top.png');
+    background-image: image-url("icons/top.png");
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
