--- a/app/assets/stylesheets/devise.mobile.scss
+++ b/app/assets/stylesheets/devise.mobile.scss
@@ -12,7 +12,7 @@
   .devise-new-wrapper {
     width: 100vw;
     height: 100vh;
-    background-image: image-url('icons/top.png');
+    background-image: image-url("icons/top.png");
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
