--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -8,7 +8,7 @@
   width: 100vw;
   height: 100vh;
   padding-top: 300px;
-  background-image: image-url('icons/top.png');
+  background-image: image-url("icons/top.png");
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -49,7 +49,7 @@
   width: 100vw;
   height: auto;
   padding: 15px;
-  background-image: image-url('icons/top.png');
+  background-image: image-url("icons/top.png");
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -93,7 +93,7 @@
 .posts-edit-wrapper {
   width: 100vw;
   height: auto;
-  background-image: image-url('icons/top.png');
+  background-image: image-url("icons/top.png");
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -132,7 +132,7 @@
 .posts-show-wrapper {
   width: 100vw;
   height: auto;
-  background-image: image-url('icons/top.png');
+  background-image: image-url("icons/top.png");
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
