--- a/app/assets/stylesheets/tutorials.mobile.scss
+++ b/app/assets/stylesheets/tutorials.mobile.scss
@@ -1,6 +1,6 @@
 @media screen and (min-width:300px){
   /*300px以上で適用する内容*/
-  .tutorila-new-wrapper {
+  .tutorials-new-wrapper {
     width: 100vw;
     height: 100vh;
     padding-top: 300px;
