--- a/app/assets/stylesheets/tutorials.mobile.scss
+++ b/app/assets/stylesheets/tutorials.mobile.scss
@@ -2,8 +2,8 @@
   /*300px以上で適用する内容*/
   .tutorials-new-wrapper {
     width: 100vw;
-    height: 100vh;
-    padding-top: 300px;
+    height: auto;
+    padding-top: 15px;
     background-image: image-url("icons/top.png");
     background-position: center center;
     background-repeat: no-repeat;
@@ -12,25 +12,25 @@
     background-color: #fff;
 
     .tutorials-new-container {
-      padding-top: 100px;
+      padding-top: 30%;
+      color: #fff;
 
       .text-white {
         color: #fff;
       }
 
       h1 {
-        font-size: 56px;
-        margin-bottom: 20px;
+        font-size: 35px;
         font-weight: 100px;
       }
       h2 {
         margin-bottom: 60px;
         font-weight: 100px;
-        font-size: 15px;
       }
-    }
+     }
 
     .btn-white {
+      color: #fff;
       border: 1px solid #fff;
       padding-top: 15px;
       padding-bottom: 15px;
@@ -40,8 +40,8 @@
       &:hover {
         color: #fff;
       }
+     }
     }
-   }
    .tutorials-edit-wrapper {
      width: 100vw;
      height: auto;
