--- a/app/assets/stylesheets/tutorials.scss
+++ b/app/assets/stylesheets/tutorials.scss
@@ -4,7 +4,7 @@
 .tutorilas-new-wrapper {
   width: 100vw;
   height: auto;
-  padding-top: 300px;
+  padding-top: auto;
   background-image: image-url("icons/top.png");
   background-position: center center;
   background-repeat: no-repeat;
@@ -13,7 +13,8 @@
   background-color: #fff;
 
   .tutorials-new-container {
-    padding-top: 100px;
+    padding-top: 10px;
+    width: 0px;
 
     .text-white {
       color: #fff;
@@ -22,6 +23,10 @@
     h1 {
       font-size: 56px;
       margin-bottom: 20px;
+      font-weight: 100px;
+    }
+    h2 {
+      margin-bottom: 60px;
       font-weight: 100px;
     }
   }
@@ -39,44 +44,45 @@
    }
  }
 .tutorials-edit-wrapper {
- width: 100vw;
- height: auto;
- padding-top: 300px;
- background-image: image-url("icons/top.png");
- background-position: center center;
- background-repeat: no-repeat;
- background-attachment: fixed;
- background-size: cover;
- background-color: #fff;
+   width: 100vw;
+   height: auto;
+   padding-top: auto;
+   background-image: image-url("icons/top.png");
+   background-position: center center;
+   background-repeat: no-repeat;
+   background-attachment: fixed;
+   background-size: cover;
+   background-color: #fff;
 
- .tutorials-edit-container {
-   padding-top: 100px;
+   .tutorials-edit-container {
+     padding-top: 10px;
 
-   .text-white {
-     color: #fff;
+     .text-white {
+       color: #fff;
+     }
+
+     h1 {
+       font-size: 56px;
+       margin-bottom: 20px;
+       font-weight: 100px;
+       width: 0px;
+     }
+     h2 {
+       margin-bottom: 60px;
+       font-weight: 100px;
+     }
    }
 
-   h1 {
-     font-size: 56px;
-     margin-bottom: 20px;
-     font-weight: 100px;
-   }
-   h2 {
-     margin-bottom: 60px;
-     font-weight: 100px;
-   }
- }
+   .btn-white {
+     border: 1px solid #fff;
+     padding-top: 15px;
+     padding-bottom: 15px;
+     font-size: 20px;
+     background-color: rgba(0,0,0,0.0);
 
- .btn-white {
-   border: 1px solid #fff;
-   padding-top: 15px;
-   padding-bottom: 15px;
-   font-size: 20px;
-   background-color: rgba(0,0,0,0.0);
-
-   &:hover {
-     color: #fff;
-   }
-  }
+     &:hover {
+       color: #fff;
+     }
+    }
  }
 }
