--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -2,9 +2,14 @@
   <div class="container">
     <div class="row">
       <div class="col-md-offset-4 col-md-4 devise-new-container">
-        <h1 class="text-center text-white">Welcome To UKA.<%= @email %>!!</h1>
+
+        <h1 class="text-center text-white">Welcome To UKA.
+          <%= @user.username %>!!</h1>
+
         <p>You Can Confirm Your Account Email Through The Link Below:</p>
+
         <p><%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token) %></p>
+
       </div>
     </div>
   </div>
