--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,21 +1,32 @@
+<div class="users-show-wrapper">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-offset-4 col-md-4 users-show-container">
 
-<aside class="col-md-4">
-  <% if !current_user?(@user) && logged_in? %>
-    <section class="message_box">
-      <div id="messages">
-        <%= render @messages %>
+        <h1 class="text-center text-white">Private Page</h1>
+
+        <section class="message_box">
+          <div id="messages">
+            <%= render @messages %>
+          </div>
+        </section>
+
+        <script type="text/javascript">
+          var height = 0;
+          $("div.message").each( function() {
+            height += ($(this).height());
+          });
+          $('section.message_box').scrollTop(height);
+        </script>
+
+        <div class="message_form">
+         <%= render 'messages/message_form',
+           {from_user: current_user, to_user: @user, room_id: @room_id} %>
+        </div>
+
+        <% end %>
+
       </div>
-    </section>
-    <script type="text/javascript">
-      var height = 0;
-      $("div.message").each( function() {
-        height += ($(this).height());
-      });
-      $('section.message_box').scrollTop(height);
-    </script>
-    <div class="message_form">
-     <%= render 'messages/message_form',
-       {from_user: current_user, to_user: @user, room_id: @room_id} %>
     </div>
-  <% end %>
-</aside>
+  </div>
+</div>
