--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -24,7 +24,7 @@
           <%= f.submit 'Evil' %>
         <% end %>
 
-        <h3>evilしたメンバー</h3>
+        <h3>A Number Of Evil Users</h3>
          <% @post.evilig_users.each do |user| %>
         <li><%= user.name %></li>
 
